tests/NormalTests/paczka1/fuzzy1/41953157.err
Error in line 1: lbR S520 59,80
Error in line 2: A983 S520 79,5
Error in line 16: SXp7MvoPe S520 67,8
Error in line 27: lbR S520 1,2
Error in line 32: lbR S462 123,60
Error in line 33: 4K4WV S520 45,2
Error in line 29: SXp7MvoPe S706 3,1
Error in line 35: SXp7MvoPe A983 42,7
Error in line 36: SXp7MvoPe S520 9,3
